scripts/kubernetes/manifests/parties/common/computation-container-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.image-pull-secret: registry-credential
    kompose.volume.type: persistentVolumeClaim
  creationTimestamp:
  labels:
    io.kompose.service: computation-container
  name: computation-container
spec:
  ports:
  - name: "31020"
    port: 31020
    targetPort: 31020
  - name: "50010"
    port: 50010
    targetPort: 50010
  - name: "50020"
    port: 50020
    targetPort: 50020
  selector:
    io.kompose.service: computation-container
status:
  loadBalancer: {}
